--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.ProductDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.OrdersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.CheckoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.CartActivity"
             android:exported="false" />
         <activity
